Continued implementation up to draw card
 - Fixed methods in senders, receivers and view interfaces
 - created missing messages
 - Fixed methods in TUIView
 - General fixes in other classes to adapt current network