@@ -7,8 +7,6 @@ import com.example.pf_soft_ing.card.side.Side;
 import com.example.pf_soft_ing.game.GameResources;
 import com.example.pf_soft_ing.player.PlayerState;
 import com.example.pf_soft_ing.player.TokenColors;
-import javafx.geometry.Pos;
-import javafx.scene.paint.Color;
 
 import java.io.BufferedReader;
 import java.io.IOException;
@@ -24,6 +22,17 @@ public class TUIView implements View {
 
     private final Map<Integer, List<String>> cardIDToCardFrontTUILines = new HashMap<>();
     private final Map<Integer, List<String>> cardIDToCardBackTUILines = new HashMap<>();
+
+    private int commonObjectiveCardID1;
+    private int commonObjectiveCardID2;
+
+    private int resDeckCardID;
+    private int visibleResCardID1;
+    private int visibleResCardID2;
+
+    private int goldDeckCardID;
+    private int visibleGoldCardID1;
+    private int visibleGoldCardID2;
 
     private CardSideType starterSide;
     private int starterCardID;
@@ -44,6 +53,9 @@ public class TUIView implements View {
     private final Map<Integer, CardSideType> playerHand = new HashMap<>();
 
     private final Map<PlayerState, List<String>> stateToCommands = new HashMap<>();
+
+    private int placingCardID;
+    private Position placingCardPos;
 
     public void start(String[] args) {
         createStateToCommandsMap();
@@ -113,49 +125,54 @@ public class TUIView implements View {
 
     private void interpretInput(String userInput) {
         String[] parts = userInput.split(" ");
-        String command = parts[0];
+        String command = parts[0].toLowerCase();
 
         List<String> legalCommands = stateToCommands.get(playerState);
         if (legalCommands.contains(command)) {
             switch (command) {
                 // TODO: add refresh command
 
-                case "CreateMatch" -> {
+                case "cm" -> { // CreateMatch
                     if (parts.length != 3) {
                         System.out.println("Error: CreateMatch takes exactly 2 arguments (num of players, nickname). Please, try again");
                         break;
                     }
+
                     sender.createMatch(Integer.parseInt(parts[1]), parts[2]);
                 }
-                case "SelectMatch" -> {
+                case "sm" -> { // SelectMatch
                     if (parts.length != 2) {
                         System.out.println("Error: SelectMatch takes exactly 1 argument (match ID). Please, try again");
                         break;
                     }
+
                     sender.selectMatch(Integer.parseInt(parts[1]));
                 }
-                case "ChooseNickname" -> {
+                case "cn" -> { // ChooseNickname
                     if (parts.length != 2) {
                         System.out.println("Error: ChooseNickname takes exactly 1 argument (nickname). Please, try again");
                         break;
                     }
+
                     sender.chooseNickname(parts[1]);
                 }
-                case "FlipStarterCard" -> {
+                case "fsc" -> { // FlipStarterCard
                     if (parts.length != 1) {
                         System.out.println("Error: FlipStarterCard does not take any arguments. Please, try again");
                         break;
                     }
+
                     flipStarterCard();
                 }
-                case "PlaceStarterCard" -> {
+                case "psc" -> { // PlaceStarterCard
                     if (parts.length != 1) {
                         System.out.println("Error: PlaceStarterCard does not take any arguments. Please, try again");
                         break;
                     }
+
                     sender.placeStarterCard(starterSide);
                 }
-                case "ChooseSecretObjective" -> {
+                case "cso" -> { // ChooseSecretObjective
                     if (parts.length != 2) {
                         System.out.println("Error: ChooseSecretObjective takes exactly 1 argument (card ID). Please, try again");
                         break;
@@ -172,24 +189,64 @@ public class TUIView implements View {
                         System.out.println("Error: " + parts[1] + " is not a valid choice. Please choose either 1 or 2.");
                     }
                 }
-                case "FlipCard" -> {
+                case "fc" -> { // FlipCard
                     if (parts.length != 2) {
                         System.out.println("Error: FlipCard takes exactly 1 argument (card ID). Please, try again");
                         break;
                     }
+
                     playerHand.compute(Integer.parseInt(parts[1]), (_, side) -> side == CardSideType.FRONT ? CardSideType.BACK : CardSideType.FRONT);
                 }
-                case "PlaceCard" -> {
+                case "pc" -> { // PlaceCard
                     if (parts.length != 3) {
                         System.out.println("Error: PlaceCard takes exactly 1 argument (card ID). Please, try again");
                         break;
                     }
-                    int cardID = Integer.parseInt(parts[1]);
-                    Position pos = posIDToValidPos.get(Integer.parseInt(parts[2]));
-                    sender.placeCard(cardID, playerHand.get(cardID), pos);
-                }
-                case "DrawCard" -> {
 
+                    placingCardID = Integer.parseInt(parts[1]);
+                    placingCardPos = posIDToValidPos.get(Integer.parseInt(parts[2]));
+
+                    sender.placeCard(placingCardID, playerHand.get(placingCardID), placingCardPos);
+                }
+                case "ddr" -> { // DrawDeckResourceCard
+                    if (parts.length != 1) {
+                        System.out.println("Error: DrawDeckResourceCard does not take any arguments. Please, try again");
+                        break;
+                    }
+
+                    sender.drawResourceCard(playerID);
+                }
+                case "dvr" -> { // DrawVisibleResourceCard
+                    if (parts.length != 2) {
+                        System.out.println("Error: DrawResourceCard takes exactly 1 argument (card index 0 or 1). Please, try again");
+                        break;
+                    }
+
+                    sender.drawVisibleResourceCard(playerID, Integer.parseInt(parts[1]));
+                }
+                case "ddg" -> { // DrawDeckGoldCard
+                    if (parts.length != 1) {
+                        System.out.println("Error: DrawDeckGoldenCard does not take any arguments. Please, try again");
+                        break;
+                    }
+
+                    sender.drawGoldenCard(playerID);
+                }
+                case "dvg" -> { // DrawVisibleGoldCard
+                    if (parts.length != 2) {
+                        System.out.println("Error: DrawVisibleGoldenCard takes exactly 1 argument (card index 0 or 1). Please, try again");
+                        break;
+                    }
+
+                    sender.drawVisibleGoldenCard(playerID, Integer.parseInt(parts[1]));
+                }
+                case "gh" -> { // GetHand
+                    if (parts.length != 1) {
+                        System.out.println("Error: GetHand does not take any arguments. Please, try again");
+                        break;
+                    }
+
+                    printPlayerHand();
                 }
             }
         }
@@ -211,7 +268,7 @@ public class TUIView implements View {
     public void showMatches(Map<Integer, List<String>> matches) {
         if (matches.isEmpty()) {
             System.out.println("No matches available.");
-            System.out.println("To create a new match type: CreateMatch <players_num> <nickname>");
+            System.out.println("To create a new match type: cm <players_num> <nickname>");
             return;
         }
 
@@ -220,13 +277,14 @@ public class TUIView implements View {
             System.out.println("\tMatch with ID " + entry.getKey() + " and players:");
             System.out.println("\t\t- " + entry.getValue());
         }
-        System.out.println("To create a new match type: CreateMatch <players_num> <nickname>");
-        System.out.println("To join a match type: SelectMatch <matchID>");
+        System.out.println("To create a new match type: cm <players_num> <nickname>");
+        System.out.println("To join a match type: sm <matchID>");
     }
 
     @Override
     public void createMatch(int matchID, String hostNickname) {
         playerState = PlayerState.MATCH_LOBBY;
+
         System.out.println("Match created with ID: " + matchID + " and host nickname: " + hostNickname);
         System.out.println("Waiting for players to join...");
     }
@@ -234,13 +292,15 @@ public class TUIView implements View {
     @Override
     public void selectMatch(int matchID, List<String> nicknames) {
         playerState = PlayerState.CHOOSING_NICKNAME;
+
         System.out.println("Match selected with ID: " + matchID);
-        System.out.println("To choose the nickname type: ChooseNickname <nickname>");
+        System.out.println("To choose the nickname type: cn <nickname>");
     }
 
     @Override
     public void chooseNickname(String nickname) {
         playerState = PlayerState.MATCH_LOBBY;
+
         System.out.println("Joined match with nickname: " + nickname);
     }
 
@@ -248,44 +308,65 @@ public class TUIView implements View {
     public void startGame(int resDeckCardID, int visibleResCardID1, int visibleResCardID2,
                           int goldDeckCardID, int visibleGoldCardID1, int visibleGoldCardID2,
                           int starterCardID) {
-        playerState = PlayerState.PLACING_STARTER;
         System.out.println("Game started.");
+
+        playerState = PlayerState.PLACING_STARTER;
 
         GameResources.initializeAllDecks();
 
-        // Print 4 visible cards, 2 deck top card and starter card
-        printDrawArea(resDeckCardID, visibleResCardID1, visibleResCardID2,
+        // Update draw area cards
+        setDrawArea(resDeckCardID, visibleResCardID1, visibleResCardID2,
                 goldDeckCardID, visibleGoldCardID1, visibleGoldCardID2);
+
+        // Print 4 visible cards, 2 deck top card and starter card
+        printDrawArea();
 
         // Create and print starter card
         printStarterCardChoice(starterCardID);
 
-        System.out.println("To view the other side of the starter card type: FlipStarterCard");
-        System.out.println("To place the starter card on the current side type: PlaceStarterCard");
+        // Print available commands
+        System.out.println("To view the other side of the starter card type: fsc");
+        System.out.println("To place the starter card on the current side type: psc");
     }
 
     @Override
-    public void setMissingSetUp(int resourceCardID1, int resourceCardID2, int goldenCardID, TokenColors tokenColor, int commonObjectiveCardID1, int commonObjectiveCardID2, int secretObjectiveCardID1, int secretObjectiveCardID2) {
+    public void setMissingSetUp(int resourceCardID1, int resourceCardID2, int goldenCardID, TokenColors tokenColor,
+                                int commonObjectiveCardID1, int commonObjectiveCardID2,
+                                int secretObjectiveCardID1, int secretObjectiveCardID2) {
+        // Place the starter card in the play area and update all legal and illegal positions
+        playArea.put(new Position(0, 0), starterCardID);
+
+        updatePlacementPositions(new Position(0, 0), starterSide);
+
+        // Set missing setup
         playerState = PlayerState.CHOOSING_OBJECTIVE;
 
-        // Add cards to player hand
-        playerHand.put(resourceCardID1, CardSideType.FRONT);
-        playerHand.put(resourceCardID2, CardSideType.FRONT);
-        playerHand.put(goldenCardID, CardSideType.FRONT);
 
-        // Create player hand
-        printPlayerHand(resourceCardID1, resourceCardID2, goldenCardID, TokenColors.getColorFromToken(tokenColor));
+        // Add cards to player hand ====================================================================================
+        createPlayerHand(resourceCardID1, resourceCardID2, goldenCardID);
 
-        // Create common objectives
-        printCommonObjectives(commonObjectiveCardID1, commonObjectiveCardID2);
+        // Print player hand
+        printPlayerHand();
 
-        // Render secret objective choice
-        printSecretObjectiveChoice(secretObjectiveCardID1, secretObjectiveCardID2);
+
+        // Create common objectives ====================================================================================
+        setCommonObjectives(commonObjectiveCardID1, commonObjectiveCardID2);
+
+        // Print common objectives
+        printCommonObjectives();
+
+
+        // Set secret objective ========================================================================================
+        setSecretObjectives(secretObjectiveCardID1, secretObjectiveCardID2);
+
+        // Print secret objective choice
+        printSecretObjectiveChoice();
     }
 
     @Override
     public void confirmSecretObjective() {
         playerState = PlayerState.COMPLETED_SETUP;
+
         int otherSecretObjectiveCardID = secretObjectiveCardID == secretObjectiveCardID1 ? secretObjectiveCardID2 : secretObjectiveCardID1;
 
         cardIDToCardFrontTUILines.remove(otherSecretObjectiveCardID);
@@ -313,41 +394,162 @@ public class TUIView implements View {
     }
 
     @Override
-    public void showPlayerTurn(int playerID, String playerNickname) {
+    public void showFirstPlayerTurn(int playerID, String playerNickname) {
         if (playerID == this.playerID) {
+            playerState = PlayerState.PLACING;
             System.out.println("It's your turn.");
-            System.out.println("To flip a card type: FlipCard <cardID>");
-            System.out.println("To place a card type: PlaceCard <cardID>");
+
+            // Print player hand
+            printPlayerHand();
+
+            // Print play area
+            printPlayArea();
+
+            // Print available commands
+            System.out.println("To check your hand type: gh");
+            System.out.println("To flip a card type: fc <cardID>");
+            System.out.println("To place a card type: pc <cardID> <posID>");
         }
         else {
+            playerState = PlayerState.WAITING;
             System.out.println("It's " + playerNickname + "'s turn.");
-            System.out.println("While waiting you can flip a card in your hand by typing: FlipCard <cardID>");
+            System.out.println("While waiting you can: ");
+            System.out.println("\t- Flip a card in your hand by typing: fc <cardID>");
+            System.out.println("\t- Check your hand by typing: gh");
         }
     }
 
-    private void printDrawArea(int resDeckCardID, int visibleResCardID1, int visibleResCardID2,
-                               int goldDeckCardID, int visibleGoldCardID1, int visibleGoldCardID2) {
-        System.out.println("Draw area:");
+    @Override
+    public void placeCard() {
+        playerState = PlayerState.DRAWING;
+
+        // Add card to play area
+        playArea.put(placingCardPos, placingCardID);
+
+        // Update legal and illegal positions
+        updatePlacementPositions(placingCardPos, playerHand.get(placingCardID));
+
+        // Remove card from player hand
+        playerHand.remove(placingCardID);
+
+        // Print draw area
+        printDrawArea();
+
+        // Print available commands
+        System.out.println("To draw a resource card type: ddr");
+        System.out.println("To draw a visible resource card type: dvr <0 or 1>");
+        System.out.println("To draw a gold card type: ddg");
+        System.out.println("To draw a visible gold card type: dvg <0 or 1>");
+    }
+
+    @Override
+    public void showNewPlayerTurn(int drawnCardID, int lastPlayerID, int newPlayerID, String playerNickname) {
+        if (lastPlayerID == playerID) {
+            playerState = PlayerState.WAITING;
+            playerHand.put(drawnCardID, CardSideType.FRONT);
+
+            System.out.println("You drew a new card (ID: " + drawnCardID + "):");
+            createPlaceableCardLines(drawnCardID, CardSideType.FRONT);
+            createPlaceableCardLines(drawnCardID, CardSideType.BACK);
+
+            for (String s : cardIDToCardFrontTUILines.get(drawnCardID)) {
+                System.out.println(s);
+            }
+        }
+        else {
+            if (playerID == newPlayerID) {
+                playerState = PlayerState.PLACING;
+
+                System.out.println("It's your turn.");
+
+                // Print player hand
+                printPlayerHand();
+
+                // Print play area
+                printPlayArea();
+
+                // Print available commands
+                System.out.println("To check your hand type: gh");
+                System.out.println("To flip a card type: fc <cardID>");
+                System.out.println("To place a card type: pc <cardID> <posID>");
+            }
+            else {
+                playerState = PlayerState.WAITING;
+
+                System.out.println("It's " + playerNickname + "'s turn.");
+                System.out.println("While waiting you can flip a card in your hand by typing: fc <cardID>");
+                System.out.println("To check your hand type: gh");
+            }
+        }
+    }
+
+    @Override
+    public void updateDrawArea(int resDeckCardID, int visibleResCardID1, int visibleResCardID2, int goldDeckCardID, int visibleGoldCardID1, int visibleGoldCardID2) {
+        setDrawArea(resDeckCardID, visibleResCardID1, visibleResCardID2, goldDeckCardID, visibleGoldCardID1, visibleGoldCardID2);
+
+        printDrawArea();
+    }
+
+    /**
+     * Set the class attributes for the 6 cards in the draw area.
+     * Creates the TUI lines (front and back) for the given cards if they are not already created.
+     * @param resDeckCardID The ID of the resource deck card.
+     * @param visibleResCardID1 The ID of the first visible resource card.
+     * @param visibleResCardID2 The ID of the second visible resource card.
+     * @param goldDeckCardID The ID of the gold deck card.
+     * @param visibleGoldCardID1 The ID of the first visible gold card.
+     * @param visibleGoldCardID2 The ID of the second visible gold card.
+     */
+    private void setDrawArea(int resDeckCardID, int visibleResCardID1, int visibleResCardID2, int goldDeckCardID, int visibleGoldCardID1, int visibleGoldCardID2) {
+        this.resDeckCardID = resDeckCardID;
+        this.visibleResCardID1 = visibleResCardID1;
+        this.visibleResCardID2 = visibleResCardID2;
+
+        this.goldDeckCardID = goldDeckCardID;
+        this.visibleGoldCardID1 = visibleGoldCardID1;
+        this.visibleGoldCardID2 = visibleGoldCardID2;
 
         // Create TUI lines for resource cards
-        createResCardLines(resDeckCardID, CardSideType.FRONT);
-        createResCardLines(resDeckCardID, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(resDeckCardID)) {
+            createResCardLines(resDeckCardID, CardSideType.FRONT);
+            createResCardLines(resDeckCardID, CardSideType.BACK);
+        }
 
-        createResCardLines(visibleResCardID1, CardSideType.FRONT);
-        createResCardLines(visibleResCardID1, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(visibleResCardID1)) {
+            createResCardLines(visibleResCardID1, CardSideType.FRONT);
+            createResCardLines(visibleResCardID1, CardSideType.BACK);
+        }
 
-        createResCardLines(visibleResCardID2, CardSideType.FRONT);
-        createResCardLines(visibleResCardID2, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(visibleResCardID2)) {
+            createResCardLines(visibleResCardID2, CardSideType.FRONT);
+            createResCardLines(visibleResCardID2, CardSideType.BACK);
+        }
 
         // Create TUI lines for gold cards
-        createGoldCardLines(goldDeckCardID, CardSideType.FRONT);
-        createGoldCardLines(goldDeckCardID, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(goldDeckCardID)) {
+            createGoldCardLines(goldDeckCardID, CardSideType.FRONT);
+            createGoldCardLines(goldDeckCardID, CardSideType.BACK);
+        }
 
-        createGoldCardLines(visibleGoldCardID1, CardSideType.FRONT);
-        createGoldCardLines(visibleGoldCardID1, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(visibleGoldCardID1)) {
+            createGoldCardLines(visibleGoldCardID1, CardSideType.FRONT);
+            createGoldCardLines(visibleGoldCardID1, CardSideType.BACK);
+        }
 
-        createGoldCardLines(visibleGoldCardID2, CardSideType.FRONT);
-        createGoldCardLines(visibleGoldCardID2, CardSideType.BACK);
+        if (!cardIDToCardFrontTUILines.containsKey(visibleGoldCardID2)) {
+            createGoldCardLines(visibleGoldCardID2, CardSideType.FRONT);
+            createGoldCardLines(visibleGoldCardID2, CardSideType.BACK);
+        }
+    }
+
+    /**
+     * Prints the draw area.
+     * The draw area consists of 6 cards divided in 2 areas:
+     *  - 3 resource cards (1 deck card and 2 visible cards)
+     *  - 3 golden cards (1 deck card and 2 visible cards)
+     */
+    private void printDrawArea() {
+        System.out.println("Draw area:");
 
         // Print TUI lines for cards in the draw area
         List<String> resDeckCard = cardIDToCardBackTUILines.get(resDeckCardID);
@@ -403,12 +605,15 @@ public class TUIView implements View {
             System.out.println(s);
         }
 
-        System.out.println("To place the starter card on the current side: PlaceStarterCard");
+        System.out.println("To place the starter card on the current side type: psc");
     }
 
-    private void printPlayerHand(int resourceCardID1, int resourceCardID2, int goldenCardID, Color colorFromToken) {
-        System.out.println("Player hand:");
+    private void createPlayerHand(int resourceCardID1, int resourceCardID2, int goldenCardID) {
+        playerHand.put(resourceCardID1, CardSideType.FRONT);
+        playerHand.put(resourceCardID2, CardSideType.FRONT);
+        playerHand.put(goldenCardID, CardSideType.FRONT);
 
+        // Create player hand
         createResCardLines(resourceCardID1, CardSideType.FRONT);
         createResCardLines(resourceCardID1, CardSideType.BACK);
 
@@ -417,24 +622,44 @@ public class TUIView implements View {
 
         createGoldCardLines(goldenCardID, CardSideType.FRONT);
         createGoldCardLines(goldenCardID, CardSideType.BACK);
+    }
 
-        List<String> resCard1Front = cardIDToCardFrontTUILines.get(resourceCardID1);
-        List<String> resCard2Front = cardIDToCardFrontTUILines.get(resourceCardID2);
-        List<String> goldCardFront = cardIDToCardFrontTUILines.get(goldenCardID);
+    private void printPlayerHand() {
+        List<List<String>> handToPrint = new ArrayList<>();
+        StringBuilder cardIDs = new StringBuilder("Your hand:");
 
-        System.out.println("Color: " + colorFromToken.toString());
+        for (Map.Entry<Integer, CardSideType> entry : playerHand.entrySet()) {
+            cardIDs.append("\t").append(entry.getKey());
 
-        System.out.println("Your hand:");
-        for (int i = 0; i < resCard1Front.size(); i++) {
-            System.out.println(resCard1Front.get(i) + "   " + resCard2Front.get(i) + "   " + goldCardFront.get(i));
+            if (entry.getValue().equals(CardSideType.FRONT)) {
+                handToPrint.add(cardIDToCardFrontTUILines.get(entry.getKey()));
+            }
+            else {
+                handToPrint.add(cardIDToCardBackTUILines.get(entry.getKey()));
+            }
+        }
+
+        System.out.println(cardIDs);
+        for (int i = 0; i < handToPrint.getFirst().size(); i++) {
+            StringBuilder line = new StringBuilder();
+
+            for (List<String> card : handToPrint) {
+                line.append(card.get(i)).append("   ");
+            }
+
+            System.out.println(line);
         }
     }
 
-    private void printCommonObjectives(int commonObjectiveCardID1, int commonObjectiveCardID2) {
+    private void setCommonObjectives(int commonObjectiveCardID1, int commonObjectiveCardID2) {
+        this.commonObjectiveCardID1 = commonObjectiveCardID1;
+        this.commonObjectiveCardID2 = commonObjectiveCardID2;
+
         createObjectiveCardLines(commonObjectiveCardID1);
-
         createObjectiveCardLines(commonObjectiveCardID2);
+    }
 
+    private void printCommonObjectives() {
         List<String> commonObjectiveCard1Front = cardIDToCardFrontTUILines.get(commonObjectiveCardID1);
         List<String> commonObjectiveCard2Front = cardIDToCardFrontTUILines.get(commonObjectiveCardID2);
 
@@ -444,30 +669,32 @@ public class TUIView implements View {
         }
     }
 
-    private void printSecretObjectiveChoice(int secretObjectiveCardID1, int secretObjectiveCardID2) {
+    private void setSecretObjectives(int secretObjectiveCardID1, int secretObjectiveCardID2) {
         this.secretObjectiveCardID1 = secretObjectiveCardID1;
         this.secretObjectiveCardID2 = secretObjectiveCardID2;
 
         createObjectiveCardLines(secretObjectiveCardID1);
         createObjectiveCardLines(secretObjectiveCardID2);
+    }
 
+    private void printSecretObjectiveChoice() {
         List<String> secretObjectiveCard1Front = cardIDToCardFrontTUILines.get(secretObjectiveCardID1);
         List<String> secretObjectiveCard2Front = cardIDToCardFrontTUILines.get(secretObjectiveCardID2);
 
-        System.out.println("Objective 1:");
-        for (String s : secretObjectiveCard1Front) {
-            System.out.println(s);
+        System.out.println("Secret objectives:");
+
+        for (int i = 0; i < secretObjectiveCard1Front.size(); i++) {
+            System.out.println(secretObjectiveCard1Front.get(i) + "   " + secretObjectiveCard2Front.get(i));
         }
 
-        System.out.println("Objective 2:");
-        for (String s : secretObjectiveCard2Front) {
-            System.out.println(s);
-        }
-
-        System.out.println("To choose one of the objectives type: ChooseSecretObjective <1 or 2>.");
+        System.out.println("To choose one of the secret objectives type: cso <1 or 2>.");
     }
 
-    private void updateIlLegalPositions(Position pos, CardSideType sideType){
+    private void printPlayArea() {
+        // TODO: Implement
+    }
+
+    private void updatePlacementPositions(Position pos, CardSideType sideType) {
         ArrayList<Position> newLegalPos = new ArrayList<>();
         ArrayList<Position> newIllegalPos = new ArrayList<>();
 
@@ -475,44 +702,44 @@ public class TUIView implements View {
 
         Side currSide = sideType == CardSideType.FRONT ? card.getFront() : card.getBack();
 
-        if (currSide.getBLCorner().isAvailable()){
+        if (currSide.getBLCorner().isAvailable()) {
             newLegalPos.add(new Position(pos.getX() - 1, pos.getY() - 1));
         }
-        else{
+        else {
             newIllegalPos.add(new Position(pos.getX() - 1, pos.getY() - 1));
         }
 
-        if (currSide.getBRCorner().isAvailable()){
+        if (currSide.getBRCorner().isAvailable()) {
             newLegalPos.add(new Position(pos.getX() + 1, pos.getY() - 1));
         }
-        else{
+        else {
             newIllegalPos.add(new Position(pos.getX() + 1, pos.getY() - 1));
         }
 
-        if (currSide.getTLCorner().isAvailable()){
+        if (currSide.getTLCorner().isAvailable()) {
             newLegalPos.add(new Position(pos.getX() - 1, pos.getY() + 1));
         }
-        else{
+        else {
             newIllegalPos.add(new Position(pos.getX() - 1, pos.getY() + 1));
         }
 
-        if (currSide.getTRCorner().isAvailable()){
+        if (currSide.getTRCorner().isAvailable()) {
             newLegalPos.add(new Position(pos.getX() + 1, pos.getY() + 1));
         }
-        else{
+        else {
             newIllegalPos.add(new Position(pos.getX() + 1, pos.getY() + 1));
         }
 
-        for (Position p : newIllegalPos){
-            if (!illegalPosList.contains(p)){
+        for (Position p : newIllegalPos) {
+            if (!illegalPosList.contains(p)) {
                 illegalPosList.add(p);
             }
 
             legalPosList.remove(p);
         }
 
-        for (Position p : newLegalPos){
-            if (!legalPosList.contains(p) && !illegalPosList.contains(p)){
+        for (Position p : newLegalPos) {
+            if (!legalPosList.contains(p) && !illegalPosList.contains(p)) {
                 legalPosList.add(p);
             }
         }
@@ -520,8 +747,29 @@ public class TUIView implements View {
         // Set the new card's position as illegal (a card just got placed)
         legalPosList.remove(pos);
 
-        if (!illegalPosList.contains(pos)){
+        if (!illegalPosList.contains(pos)) {
             illegalPosList.add(pos);
+        }
+
+        // Update the posIDToValidPos map
+        posIDToValidPos.clear();
+
+        for (int i = 0; i < legalPosList.size(); i++) {
+            posIDToValidPos.put(i, legalPosList.get(i));
+        }
+    }
+
+    private void createPlaceableCardLines(int cardID, CardSideType sideType){
+        PlaceableCard card = GameResources.getPlaceableCardByID(cardID);
+
+        if (card instanceof ResourceCard){
+            createResCardLines(cardID, sideType);
+        }
+        else if (card instanceof GoldenCard){
+            createGoldCardLines(cardID, sideType);
+        }
+        else {
+            createStarterCardLines(cardID, sideType);
         }
     }
 
@@ -945,8 +1193,8 @@ public class TUIView implements View {
     }
 
     private void createBLLShapeObjectiveCardLines(BLLShapeObjectiveCard card) {
-        String mainColor = card.getMainElementType().getColor();
-        String secColor = card.getSecondaryElementType().getColor();
+        String mainColor = card.getMainElementType().getBgColor();
+        String secColor = card.getSecondaryElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -962,8 +1210,8 @@ public class TUIView implements View {
     }
 
     private void createBRLShapeObjectiveCardLines(BRLShapeObjectiveCard card) {
-        String mainColor = card.getMainElementType().getColor();
-        String secColor = card.getSecondaryElementType().getColor();
+        String mainColor = card.getMainElementType().getBgColor();
+        String secColor = card.getSecondaryElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -982,7 +1230,7 @@ public class TUIView implements View {
         List<String> lines = new ArrayList<>();
 
         if (card.getID() >= 94 && card.getID() <= 97) {
-            String color = card.getResourceType().getColor();
+            String color = card.getResourceType().getBgColor();
 
             lines.add("┏━━━━━━━━━━━━━━━━━━━━━━━┓");
             lines.add("┃               " + card.getPoints() + "       ┃");
@@ -998,7 +1246,7 @@ public class TUIView implements View {
             lines.add("┏━━━━━━━━━━━━━━━━━━━━━━━┓");
             lines.add("┃               "+ card.getPoints()+ "       ┃");
             lines.add("┃                       ┃");
-            lines.add("┃              " + resType + "  "  + resType + "     ┃");
+            lines.add("┃              " + CC.YELLOW + resType + "  "  + resType + CC.RESET + "     ┃");
             lines.add("┃                       ┃");
             lines.add("┃                       ┃");
             lines.add("┗━━━━━━━━━━━━━━━━━━━━━━━┛");
@@ -1008,7 +1256,7 @@ public class TUIView implements View {
     }
 
     private void createTLBRDiagonalObjectiveCardLines(TLBRDiagonalObjectiveCard card) {
-        String color = card.getElementType().getColor();
+        String color = card.getElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -1024,8 +1272,8 @@ public class TUIView implements View {
     }
 
     private void createTLLShapeObjectiveCardLines(TLLShapeObjectiveCard card) {
-        String mainColor = card.getMainElementType().getColor();
-        String secColor = card.getSecondaryElementType().getColor();
+        String mainColor = card.getMainElementType().getBgColor();
+        String secColor = card.getSecondaryElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -1041,7 +1289,7 @@ public class TUIView implements View {
     }
 
     private void createTRBLDiagonalObjectiveCardLines(TRBLDiagonalObjectiveCard card) {
-        String color = card.getElementType().getColor();
+        String color = card.getElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -1071,8 +1319,8 @@ public class TUIView implements View {
     }
 
     private void createTRLShapeObjectiveCardLines(TRLShapeObjectiveCard card) {
-        String mainColor = card.getMainElementType().getColor();
-        String secColor = card.getSecondaryElementType().getColor();
+        String mainColor = card.getMainElementType().getBgColor();
+        String secColor = card.getSecondaryElementType().getBgColor();
 
         List<String> lines = new ArrayList<>();
 
@@ -1088,14 +1336,31 @@ public class TUIView implements View {
     }
 
     private void createStateToCommandsMap() {
-        stateToCommands.put(PlayerState.MAIN_MENU, new ArrayList<>(Arrays.asList("CreateMatch", "SelectMatch")));
-        stateToCommands.put(PlayerState.MATCH_LOBBY, new ArrayList<>());
-        stateToCommands.put(PlayerState.CHOOSING_NICKNAME, new ArrayList<>(List.of("ChooseNickname")));
-        stateToCommands.put(PlayerState.PLACING_STARTER, new ArrayList<>(Arrays.asList("FlipStarterCard", "PlaceStarterCard")));
-        stateToCommands.put(PlayerState.CHOOSING_OBJECTIVE, new ArrayList<>(List.of("ChooseSecretObjective")));
-        stateToCommands.put(PlayerState.COMPLETED_SETUP, new ArrayList<>());
-        stateToCommands.put(PlayerState.WAITING, new ArrayList<>(List.of("FlipCard")));
-        stateToCommands.put(PlayerState.PLACING, new ArrayList<>(Arrays.asList("FlipCard", "PlaceCard")));
-        stateToCommands.put(PlayerState.DRAWING, new ArrayList<>(Arrays.asList("FlipCard", "DrawCard")));
+        stateToCommands.put(PlayerState.MAIN_MENU,
+                new ArrayList<>(Arrays.asList("cm", "sm")));
+
+        stateToCommands.put(PlayerState.MATCH_LOBBY,
+                new ArrayList<>());
+
+        stateToCommands.put(PlayerState.CHOOSING_NICKNAME,
+                new ArrayList<>(List.of("cn")));
+
+        stateToCommands.put(PlayerState.PLACING_STARTER,
+                new ArrayList<>(Arrays.asList("fsc", "psc")));
+
+        stateToCommands.put(PlayerState.CHOOSING_OBJECTIVE,
+                new ArrayList<>(List.of("cso")));
+
+        stateToCommands.put(PlayerState.COMPLETED_SETUP,
+                new ArrayList<>());
+
+        stateToCommands.put(PlayerState.WAITING,
+                new ArrayList<>(List.of("fc", "gh")));
+
+        stateToCommands.put(PlayerState.PLACING,
+                new ArrayList<>(Arrays.asList("fc", "gh", "pc")));
+
+        stateToCommands.put(PlayerState.DRAWING,
+                new ArrayList<>(Arrays.asList("fc", "gh", "ddr", "dvr", "ddg", "dvg")));
     }
 }
